--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "request": "^2.88.2"
   }
