--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
     "request": "^2.88.2"
   }
 }
